--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -5,7 +5,7 @@
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Simulado ENADE - Login</title>
+        <title>SIMULADO ENADE - Login</title>
     </h:head>
     <h:body>
         <p:dialog visible="true" width="510" height="565" header="Acessar o Sistema" showHeader="false" modal="true" resizable="false">            
@@ -16,7 +16,7 @@
                 <p:tab title="Login">
                     <h:form>
                         <h:panelGrid>
-                            <div>Digite seu e-mail e senha para acessar o sistema:</div>
+                            <div>Digite seu e-mail e senha para logar:</div>
                             <p:inputText 
                                 placeholder="E-mail" 
                                 value="#{loginController.usuarioLogin.email}" 
@@ -39,7 +39,7 @@
                 <p:tab title="Cadastro">
                     <h:form>
                         <h:panelGrid>
-                            <div>Preencha os dados para se cadastrar no sistema:</div>
+                            <div>Preencha os dados efetuar o cadastrar no sistema:</div>
                             <p:inputText 
                                 placeholder="Nome" 
                                 value="#{loginController.usuarioCadastro.nome}"
