--- a/src/main/webapp/realizarProva.xhtml
+++ b/src/main/webapp/realizarProva.xhtml
@@ -50,7 +50,7 @@
 
             <p:dialog header="Atenção" widgetVar="finalizar" modal="true"> 
                 <h:form>
-                    <p>Você tem certeza que deseja finalizar a prova?</p>
+                    <p>Tem certeza que deseja finalizar a prova?</p>
                     <p:commandButton value="Confirmar" action="#{realizarProvaController.finalizarProva()}" style="float: right" /> 
                 </h:form>
             </p:dialog>
